# shared-ai-utils

./: .coverage  .cursorignore  .cursorrules  .gitignore  API_REFERENCE.md  CODEX_ENV_SETUP.md  CONTRIBUTING.md  COVERAGE_FIX_SUMMARY.md  CROSS_REPO_INTEGRATION_COMPLETE.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  TEST_COVERAGE_ASSESSMENT.md  UX_ENHANCEMENT_PLAN.md  UX_IMPLEMENTATION_SUMMARY.md  coverage.json  pyproject.toml
.agent/workflows/: pre-commit-checklist.md  pre-task.md
scripts/: codex-setup.sh  sync_rules.sh
src/shared_ai_utils/: __init__.py
src/shared_ai_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shared_ai_utils/analytics/: __init__.py  dashboards.py
src/shared_ai_utils/api/: __init__.py  auth.py  errors.py  health.py  logging.py  middleware.py  rate_limit.py  websocket.py
src/shared_ai_utils/assessment/: __init__.py  engine.py  helpers.py  models.py  pattern_checks.py
src/shared_ai_utils/assessment/scorers/: __init__.py  base.py  council_adapter.py  heuristic.py  motive.py
src/shared_ai_utils/cli/: __init__.py  base.py  docs.py  extensions.py  onboarding.py  rich_utils.py  wizards.py
src/shared_ai_utils/config/: __init__.py  adapters.py  base.py  presets.py  yaml.py
src/shared_ai_utils/docs/: __init__.py  contextual_loader.py  hub.py  indexer.py
src/shared_ai_utils/errors/: __init__.py  contextual_help.py  formatter.py  recovery.py
src/shared_ai_utils/insights/: __init__.py  engine.py
src/shared_ai_utils/integrations/: __init__.py  feedback_loop.py  sono_eval.py  sono_platform.py
src/shared_ai_utils/llm/: __init__.py  manager.py  providers.py
src/shared_ai_utils/metrics/: __init__.py  collector.py
src/shared_ai_utils/onboarding/: __init__.py  intent_detector.py  unified_setup.py  verification.py
src/shared_ai_utils/onboarding/setup_wizards/: __init__.py  base.py  generic.py
src/shared_ai_utils/patterns/: __init__.py  manager.py  memory.py
src/shared_ai_utils/rules/: builder.py
src/shared_ai_utils/rules/core/: 00-prime-directives.md  01-operational-guardrails.md
src/shared_ai_utils/rules/guides/: 03-common-pitfalls.md  04-key-commands.md  05-key-paths.md  08-reasoning-logs.md
src/shared_ai_utils/rules/standards/: 02-coding-standards.md  06-ai-assisted-development.md  07-documentation.md  09-framework-guidelines.md
src/shared_ai_utils/tts/: __init__.py  manager.py  providers.py
src/shared_ai_utils/utils/: __init__.py  paths.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_assessment.py  test_config.py  test_llm_providers.py  test_metrics.py  test_patterns.py  test_rules.py  test_tts.py
