[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-ai-utils"
version = "0.1.0"
description = "Shared utilities for AI-assisted development tools: LLM providers, configuration, assessment, patterns, and CLI frameworks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shared AI Utils Contributors"}
]
keywords = [
    "ai", "llm", "configuration", "assessment", "patterns", 
    "cli", "fastapi", "utilities", "shared"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    # FastAPI (for API utilities)
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
# LLM Providers
anthropic = ["anthropic>=0.18.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
# Memory integration
memu = ["memu-py>=0.1.0"]
# All LLM providers
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]
# All optional dependencies
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "memu-py>=0.1.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/doronpers/shared-ai-utils"
Repository = "https://github.com/doronpers/shared-ai-utils"
Issues = "https://github.com/doronpers/shared-ai-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/shared_ai_utils --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src/shared_ai_utils"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
